05/07/2018: 13:37 - 13:45:pool[install and set up friendly_id]
05/07/2018: 13:59 - 14:05:pool[add new/edit form partial for participants]
05/07/2018: 14:05 - 14:11:pool[add edit/new views that pass data to partial]
05/07/2018: 14:11 - 14:13:pool[add routes for participants]
05/07/2018: 14:13 - 14:59:pool[fix form partial to use locals]
05/07/2018: 15:59 - 16:15:pool[add index view]
05/07/2018: 16:15 - 16:33:pool[add show view for participant]
06/07/2018: 13:51 - 13:53:pool[create logged_in? helper]
06/07/2018: 13:53 - 13:55:pool[create authenticate_user method]
06/07/2018: 13:55 - 13:58:pool[add authenticate user before action to controllers]
06/07/2018: 14:15 - 14:30:pool[add validations for participant]
06/07/2018: 14:30 - 14:32:pool[add validations for user password]
06/07/2018: 14:58 - 15:01:pool[add @resource to controllers]
06/07/2018: 15:01 - 15:12:pool[add errors partial to shared]
06/07/2018: 15:12 - 16:48:pool[fix setup of errors in controllers]
09/07/2018: 13:33 - 14:18:pool[add edit/delete controls to participant index view]
09/07/2018: 14:18 - 14:18:pool[fix participants controller to redirect to index on create]
09/07/2018: 14:18 - 14:23:pool[remove flash message from participants controller destroy method]
09/07/2018: 14:23 - 14:28:pool[add a new column to index view for incrementing and decrementing points]
09/07/2018: 14:28 - 14:41:pool[setup javascript to inc/dec points based on value specified in text field]
09/07/2018: 14:41 - 14:42:pool[replace js with button_to helpers in index view]
09/07/2018: 14:42 - 15:04:pool[add inc and dec actions]
09/07/2018: 15:04 - 15:23:pool[add inc and dec actions to participants controller]
09/07/2018: 15:23 - 15:28:pool[fix index view inc/dec js]
27/07/2018: 11:20 - 12:21:pool[write import csv method and pass csv feature spec]
27/07/2018: 13:17 - 14:25:pool[write template render tests for views]
28/07/2018: 19:01 - 19:20:pool[add basic html struct to statics/home]