@@ -1,12 +1,8 @@
 
-<div class="content">
+
   <h3>Welcome to the iAppreciate Web Hub</h3>
   <h4>Curious how many points you've earned?</h4>
   You can easily check your current points by navigating to "iappreciate.io/your-name".
   <p>or</p>
   <h4>Know how many points you have and want to spend them?</h4>
   Visit the reward catalogue by <%= link_to "Clicking Here", root_path %>
-
-</div>
-
-<%= render 'shared/footer' %>
